move AthenzReqeustLog to server-common
Signed-off-by: Henry Avetisyan <hga@verizonmedia.com>